--- a/index.html
+++ b/index.html
@@ -9,5 +9,28 @@
     />
     <title>Home Page</title>
   </head>
-  <body></body>
+  <body>
+    <!-- navbar -->
+    <header
+      class="navbar navbar-expand-lg navbar bg-dark border-bottom border-bottom-dark"
+      data-bs-theme="dark"
+    >
+      <div class="container">
+        <a class="navbar-brand text-light" href="#"> Bootstrap </a>
+        <div class="collapse navbar-collapse flex-row-reverse" id="navbarNav">
+          <!-- <button
+            type="button"
+            class="btn btn-primary"
+            data-toggle="modal"
+            data-target="#loginModal"
+          >
+            Login
+          </button> -->
+          <button type="button" class="btn btn-primary" href="#">Login</button>
+        </div>
+      </div>
+    </header>
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.bundle.min.js"></script>
+  </body>
 </html>
