--- a/login.html
+++ b/login.html
@@ -7,20 +7,16 @@
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css"
     />
-    <title>Home Page</title>
+    <title>Login Page</title>
   </head>
   <body>
-    <!-- navbar -->
-    <header
-      class="navbar navbar-expand-lg navbar bg-dark border-bottom border-bottom-dark"
-      data-bs-theme="dark"
-    >
-      <div class="container">
-        <a class="navbar-brand text-light" href="#"> Bootstrap </a>
-        <a class="btn btn-primary btn-light" href="login.html">Login</a>
+    <div class="vh-100 gradient-custom">
+      <div class="container py-5 h-100">
+        <div class="row d-flex justify-content-center align-items-center h-100">
+          <div class="col-12 col-md-8 col-lg-6 col-xl-5"></div>
+        </div>
       </div>
-    </header>
-
+    </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.bundle.min.js"></script>
   </body>
 </html>
