--- a/login.html
+++ b/login.html
@@ -74,7 +74,9 @@
                 <div>
                   <p class="mb-0">
                     Don't have an account?
-                    <a href="#!" class="text-white-50 fw-bold">Sign Up</a>
+                    <a href="signup.html" class="text-white-50 fw-bold"
+                      >Sign Up</a
+                    >
                   </p>
                 </div>
               </div>
