Update 6: Added navbar and sign up info for signup.html

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       data-bs-theme="dark"
     >
       <div class="container">
-        <a class="navbar-brand text-light" href="#"> Bootstrap </a>
+        <a class="navbar-brand text-light" href="index.html"> Bootstrap </a>
         <a class="btn btn-primary btn-light" href="login.html">Login</a>
       </div>
     </header>
