--- a/login.html
+++ b/login.html
@@ -24,7 +24,7 @@
                   </p>
 
                   <div class="form-outline form-white mb-4">
-                    <label class="form-label" for="typeEmailX">Email</label>
+                    <label class="form-label" for="typeEmailX">Username</label>
                     <input
                       type="email"
                       id="typeEmailX"
@@ -48,6 +48,7 @@
                   </p>
 
                   <button
+                    id="login"
                     class="btn btn-outline-light btn-lg px-5"
                     type="submit"
                   >
@@ -86,5 +87,9 @@
       </div>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="/js/login.js"></script>
+    <script>
+      pages.loadFor("login");
+    </script>
   </body>
 </html>
