--- a/signup.html
+++ b/signup.html
@@ -117,5 +117,9 @@
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="/js/login.js"></script>
+    <script>
+      pages.loadFor("signup");
+    </script>
   </body>
 </html>
