--- a/login.html
+++ b/login.html
@@ -27,7 +27,7 @@
                     <label class="form-label" for="typeEmailX">Username</label>
                     <input
                       type="email"
-                      id="typeEmailX"
+                      id="username"
                       class="form-control form-control-lg"
                     />
                   </div>
@@ -38,17 +38,21 @@
                     >
                     <input
                       type="password"
-                      id="typePasswordX"
+                      id="password"
                       class="form-control form-control-lg"
                     />
                   </div>
 
-                  <p class="small mb-5 pb-lg-2">
+                  <p id="message" class="small pb-lg-2" style="display: none">
+                    Wrong Username or password.
+                  </p>
+
+                  <p class="small mb-4 pb-lg-2">
                     <a class="text-white-50" href="#!">Forgot password?</a>
                   </p>
 
                   <button
-                    id="login"
+                    id="login-btn"
                     class="btn btn-outline-light btn-lg px-5"
                     type="submit"
                   >
@@ -88,8 +92,5 @@
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.bundle.min.js"></script>
     <script src="/js/login.js"></script>
-    <script>
-      pages.loadFor("login");
-    </script>
   </body>
 </html>
