--- a/dashboard.html
+++ b/dashboard.html
@@ -22,7 +22,7 @@
                     id="welcome"
                   ></h1>
                   <h1 class="fw-bold mb-2 text-uppercase lh-lg">
-                    Login Succefull.
+                    Login Succesfull.
                   </h1>
                 </div>
               </div>
